--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head> <!--A head contains information for the browser, like setting tab titles or linking CSS files. This is not visible for the user.-->
     <meta charset="UTF-8">
+    <link rel="me" href="https://mstdn.social/@j4ck">
     <title>jack</title> <!--Sets the websites title, which is visible in the tab-->
     <link rel="stylesheet" href="/src/styles/styles.css"> <!--Links a file, in this case, as CSS file which will be used as a stylesheet-->
     <meta name="viewport" content="width=device-width, initial-scale=1" /> <!--Set the viewport (screen) to 1x scale-->
