--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <br>
         <h4>find me across the internet!</h4>
         <div> <!--Put the links in a separate container, that way we can align them in a row. Target=_blank rel noopener opens the link in a new tab.-->
+            <a href="https://micro.jglypt.net" target="_blank" rel="noopener">micro.blog</a>
             <a href="https://bsky.app/profile/jglypt.net" target="_blank" rel="noopener">bluesky</a>
             <a href="https://twitter.com/jglypt" target="_blank" rel="noopener">twitter</a>
             <a href="https://mstdn.social/@j4ck" target="_blank" rel="noopener">mastodon</a>
